8315034: File.mkdirs() occasionally fails to create folders on Windows shared folder

Backport-of: 7ad700596fbc58c27fedfa46755e80ea57712fac